UPDATE: fixed overlapping

--- a/Portfolio/src/styles/global.css
+++ b/Portfolio/src/styles/global.css
@@ -92,7 +92,7 @@ hr {
 /* For screens between 768px and 1023px (tablets and small desktops) */
 @media (max-width: 1023px) {
   body {
-    padding-top: 0;
+    padding-top: 25px;
   }
 
   .container-fluid {
